welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:5: error: not found: value lookingFor
  	if(nums(i)==lookingFor){nb+=1}   
                    ^